asm8080Parser.py
# Generated from C:/Users/Alejosebasp/Documents/UNAL/Lenguajes/ADHY/grammar\asm8080.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class asm8080Parser ( Parser ):

    grammarFileName = "asm8080.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "','", "'+'", "'-'", "'*'", "'/'", 
                     "'('", "')'", "'$'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "ASSEMBLER_DIRECTIVE", "REGISTER", 
                      "OPCODE", "NAME", "NUMBER", "COMMENT", "STRING", "EOL", 
                      "WS" ]

    RULE_prog = 0
    RULE_line = 1
    RULE_instruction = 2
    RULE_opcode = 3
    RULE_register_ = 4
    RULE_directive = 5
    RULE_assemblerdirective = 6
    RULE_lbl = 7
    RULE_expressionlist = 8
    RULE_label = 9
    RULE_expression = 10
    RULE_multiplyingExpression = 11
    RULE_argument = 12
    RULE_dollar = 13
    RULE_string = 14
    RULE_name = 15
    RULE_number = 16
    RULE_comment = 17

    ruleNames =  [ "prog", "line", "instruction", "opcode", "register_", 
                   "directive", "assemblerdirective", "lbl", "expressionlist", 
                   "label", "expression", "multiplyingExpression", "argument", 
                   "dollar", "string", "name", "number", "comment" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    ASSEMBLER_DIRECTIVE=10
    REGISTER=11
    OPCODE=12
    NAME=13
    NUMBER=14
    COMMENT=15
    STRING=16
    EOL=17
    WS=18

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOL(self, i:int=None):
            if i is None:
                return self.getTokens(asm8080Parser.EOL)
            else:
                return self.getToken(asm8080Parser.EOL, i)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(asm8080Parser.LineContext)
            else:
                return self.getTypedRuleContext(asm8080Parser.LineContext,i)


        def getRuleIndex(self):
            return asm8080Parser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = asm8080Parser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 37
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 36
                    self.line()


                self.state = 39
                self.match(asm8080Parser.EOL)
                self.state = 42 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << asm8080Parser.T__6) | (1 << asm8080Parser.T__8) | (1 << asm8080Parser.ASSEMBLER_DIRECTIVE) | (1 << asm8080Parser.REGISTER) | (1 << asm8080Parser.OPCODE) | (1 << asm8080Parser.NAME) | (1 << asm8080Parser.NUMBER) | (1 << asm8080Parser.COMMENT) | (1 << asm8080Parser.STRING) | (1 << asm8080Parser.EOL))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lbl(self):
            return self.getTypedRuleContext(asm8080Parser.LblContext,0)


        def instruction(self):
            return self.getTypedRuleContext(asm8080Parser.InstructionContext,0)


        def directive(self):
            return self.getTypedRuleContext(asm8080Parser.DirectiveContext,0)


        def comment(self):
            return self.getTypedRuleContext(asm8080Parser.CommentContext,0)


        def getRuleIndex(self):
            return asm8080Parser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine" ):
                return visitor.visitLine(self)
            else:
                return visitor.visitChildren(self)




    def line(self):

        localctx = asm8080Parser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 44
                self.lbl()


            self.state = 49
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [asm8080Parser.OPCODE]:
                self.state = 47
                self.instruction()
                pass
            elif token in [asm8080Parser.T__6, asm8080Parser.T__8, asm8080Parser.ASSEMBLER_DIRECTIVE, asm8080Parser.REGISTER, asm8080Parser.NAME, asm8080Parser.NUMBER, asm8080Parser.STRING]:
                self.state = 48
                self.directive()
                pass
            elif token in [asm8080Parser.COMMENT, asm8080Parser.EOL]:
                pass
            else:
                pass
            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==asm8080Parser.COMMENT:
                self.state = 51
                self.comment()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def opcode(self):
            return self.getTypedRuleContext(asm8080Parser.OpcodeContext,0)


        def expressionlist(self):
            return self.getTypedRuleContext(asm8080Parser.ExpressionlistContext,0)


        def getRuleIndex(self):
            return asm8080Parser.RULE_instruction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruction" ):
                listener.enterInstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruction" ):
                listener.exitInstruction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruction" ):
                return visitor.visitInstruction(self)
            else:
                return visitor.visitChildren(self)




    def instruction(self):

        localctx = asm8080Parser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instruction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.opcode()
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << asm8080Parser.T__6) | (1 << asm8080Parser.T__8) | (1 << asm8080Parser.REGISTER) | (1 << asm8080Parser.NAME) | (1 << asm8080Parser.NUMBER) | (1 << asm8080Parser.STRING))) != 0):
                self.state = 55
                self.expressionlist()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OpcodeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPCODE(self):
            return self.getToken(asm8080Parser.OPCODE, 0)

        def getRuleIndex(self):
            return asm8080Parser.RULE_opcode

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpcode" ):
                listener.enterOpcode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpcode" ):
                listener.exitOpcode(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOpcode" ):
                return visitor.visitOpcode(self)
            else:
                return visitor.visitChildren(self)




    def opcode(self):

        localctx = asm8080Parser.OpcodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_opcode)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(asm8080Parser.OPCODE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Register_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REGISTER(self):
            return self.getToken(asm8080Parser.REGISTER, 0)

        def getRuleIndex(self):
            return asm8080Parser.RULE_register_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegister_" ):
                listener.enterRegister_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegister_" ):
                listener.exitRegister_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRegister_" ):
                return visitor.visitRegister_(self)
            else:
                return visitor.visitChildren(self)




    def register_(self):

        localctx = asm8080Parser.Register_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_register_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(asm8080Parser.REGISTER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DirectiveContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assemblerdirective(self):
            return self.getTypedRuleContext(asm8080Parser.AssemblerdirectiveContext,0)


        def expressionlist(self):
            return self.getTypedRuleContext(asm8080Parser.ExpressionlistContext,0)


        def argument(self):
            return self.getTypedRuleContext(asm8080Parser.ArgumentContext,0)


        def getRuleIndex(self):
            return asm8080Parser.RULE_directive

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDirective" ):
                listener.enterDirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDirective" ):
                listener.exitDirective(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDirective" ):
                return visitor.visitDirective(self)
            else:
                return visitor.visitChildren(self)




    def directive(self):

        localctx = asm8080Parser.DirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_directive)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << asm8080Parser.T__6) | (1 << asm8080Parser.T__8) | (1 << asm8080Parser.REGISTER) | (1 << asm8080Parser.NAME) | (1 << asm8080Parser.NUMBER) | (1 << asm8080Parser.STRING))) != 0):
                self.state = 62
                self.argument()


            self.state = 65
            self.assemblerdirective()
            self.state = 66
            self.expressionlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssemblerdirectiveContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSEMBLER_DIRECTIVE(self):
            return self.getToken(asm8080Parser.ASSEMBLER_DIRECTIVE, 0)

        def getRuleIndex(self):
            return asm8080Parser.RULE_assemblerdirective

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssemblerdirective" ):
                listener.enterAssemblerdirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssemblerdirective" ):
                listener.exitAssemblerdirective(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssemblerdirective" ):
                return visitor.visitAssemblerdirective(self)
            else:
                return visitor.visitChildren(self)




    def assemblerdirective(self):

        localctx = asm8080Parser.AssemblerdirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assemblerdirective)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(asm8080Parser.ASSEMBLER_DIRECTIVE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LblContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def label(self):
            return self.getTypedRuleContext(asm8080Parser.LabelContext,0)


        def getRuleIndex(self):
            return asm8080Parser.RULE_lbl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLbl" ):
                listener.enterLbl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLbl" ):
                listener.exitLbl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLbl" ):
                return visitor.visitLbl(self)
            else:
                return visitor.visitChildren(self)




    def lbl(self):

        localctx = asm8080Parser.LblContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_lbl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.label()
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==asm8080Parser.T__0:
                self.state = 71
                self.match(asm8080Parser.T__0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(asm8080Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(asm8080Parser.ExpressionContext,i)


        def getRuleIndex(self):
            return asm8080Parser.RULE_expressionlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionlist" ):
                listener.enterExpressionlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionlist" ):
                listener.exitExpressionlist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionlist" ):
                return visitor.visitExpressionlist(self)
            else:
                return visitor.visitChildren(self)




    def expressionlist(self):

        localctx = asm8080Parser.ExpressionlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expressionlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.expression()
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==asm8080Parser.T__1:
                self.state = 75
                self.match(asm8080Parser.T__1)
                self.state = 76
                self.expression()
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(asm8080Parser.NameContext,0)


        def getRuleIndex(self):
            return asm8080Parser.RULE_label

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabel" ):
                listener.enterLabel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabel" ):
                listener.exitLabel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabel" ):
                return visitor.visitLabel(self)
            else:
                return visitor.visitChildren(self)




    def label(self):

        localctx = asm8080Parser.LabelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_label)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def multiplyingExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(asm8080Parser.MultiplyingExpressionContext)
            else:
                return self.getTypedRuleContext(asm8080Parser.MultiplyingExpressionContext,i)


        def getRuleIndex(self):
            return asm8080Parser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = asm8080Parser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.multiplyingExpression()
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==asm8080Parser.T__2 or _la==asm8080Parser.T__3:
                self.state = 85
                _la = self._input.LA(1)
                if not(_la==asm8080Parser.T__2 or _la==asm8080Parser.T__3):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 86
                self.multiplyingExpression()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MultiplyingExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(asm8080Parser.ArgumentContext)
            else:
                return self.getTypedRuleContext(asm8080Parser.ArgumentContext,i)


        def getRuleIndex(self):
            return asm8080Parser.RULE_multiplyingExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiplyingExpression" ):
                listener.enterMultiplyingExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiplyingExpression" ):
                listener.exitMultiplyingExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiplyingExpression" ):
                return visitor.visitMultiplyingExpression(self)
            else:
                return visitor.visitChildren(self)




    def multiplyingExpression(self):

        localctx = asm8080Parser.MultiplyingExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_multiplyingExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.argument()
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==asm8080Parser.T__4 or _la==asm8080Parser.T__5:
                self.state = 93
                _la = self._input.LA(1)
                if not(_la==asm8080Parser.T__4 or _la==asm8080Parser.T__5):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 94
                self.argument()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def number(self):
            return self.getTypedRuleContext(asm8080Parser.NumberContext,0)


        def register_(self):
            return self.getTypedRuleContext(asm8080Parser.Register_Context,0)


        def dollar(self):
            return self.getTypedRuleContext(asm8080Parser.DollarContext,0)


        def name(self):
            return self.getTypedRuleContext(asm8080Parser.NameContext,0)


        def string(self):
            return self.getTypedRuleContext(asm8080Parser.StringContext,0)


        def expression(self):
            return self.getTypedRuleContext(asm8080Parser.ExpressionContext,0)


        def getRuleIndex(self):
            return asm8080Parser.RULE_argument

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgument" ):
                listener.enterArgument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgument" ):
                listener.exitArgument(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgument" ):
                return visitor.visitArgument(self)
            else:
                return visitor.visitChildren(self)




    def argument(self):

        localctx = asm8080Parser.ArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_argument)
        try:
            self.state = 109
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [asm8080Parser.NUMBER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.number()
                pass
            elif token in [asm8080Parser.REGISTER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 101
                self.register_()
                pass
            elif token in [asm8080Parser.T__8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 102
                self.dollar()
                pass
            elif token in [asm8080Parser.NAME]:
                self.enterOuterAlt(localctx, 4)
                self.state = 103
                self.name()
                pass
            elif token in [asm8080Parser.STRING]:
                self.enterOuterAlt(localctx, 5)
                self.state = 104
                self.string()
                pass
            elif token in [asm8080Parser.T__6]:
                self.enterOuterAlt(localctx, 6)
                self.state = 105
                self.match(asm8080Parser.T__6)
                self.state = 106
                self.expression()
                self.state = 107
                self.match(asm8080Parser.T__7)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DollarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return asm8080Parser.RULE_dollar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDollar" ):
                listener.enterDollar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDollar" ):
                listener.exitDollar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDollar" ):
                return visitor.visitDollar(self)
            else:
                return visitor.visitChildren(self)




    def dollar(self):

        localctx = asm8080Parser.DollarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_dollar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(asm8080Parser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(asm8080Parser.STRING, 0)

        def getRuleIndex(self):
            return asm8080Parser.RULE_string

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)




    def string(self):

        localctx = asm8080Parser.StringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_string)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(asm8080Parser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
